FIX: UI. slider bottom whitespace

--- a/packages/Arete/LadiesHub/src/Resources/assets/sass/app.scss
+++ b/packages/Arete/LadiesHub/src/Resources/assets/sass/app.scss
@@ -1138,6 +1138,7 @@ section.slider-block {
             li{
                 position: absolute;
                 visibility: hidden;
+                line-height:0;
             }
 
             li.show {
